@@ -1,4 +1,6 @@
 ver 0.19.5 (not yet released)
+* decoder
+  - dsdiff, dsf, opus: fix deadlock while seeking
 
 ver 0.19.4 (2014/11/18)
 * protocol
